<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@color/md_theme_background"
    android:padding="12dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_surface"
        android:title="@string/details"
        android:titleTextColor="@color/md_theme_onSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:maxLines="8"
            android:inputType="textMultiLine"
            android:textColor="@color/md_theme_onSurface"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTranslation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tilText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTranslation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:maxLines="6"
            android:inputType="textMultiLine"
            android:hint="@string/translate_auto"
            android:textColor="@color/md_theme_onSurface"/>
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/mediaFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_row"
        app:layout_constraintTop_toBottomOf="@id/tilTranslation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomRow">

        <ImageView
            android:id="@+id/ivMedia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_name"/>

        <com.pasiflonet.mobile.ui.overlay.EditOverlayView
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/bottomRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnWatermark"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_watermark"/>

            <Space android:layout_width="10dp" android:layout_height="1dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBlur"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_blur"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rgMedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/rbWithMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_with_media"
                android:textColor="@color/md_theme_onSurface"
                android:checked="true"/>

            <Space android:layout_width="18dp" android:layout_height="1dp"/>

            <RadioButton
                android:id="@+id/rbWithoutMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_without_media"
                android:textColor="@color/md_theme_onSurface"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
